<resources>
    <string name="app_name">歩数</string>
    <string name="title_home">Home</string>
    <string name="title_google_fit">GoogleFit</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">設定</string>

    <string name="device_screen_overview">歩数</string>
    <string name="device_screen_info_button">詳細情報</string>
    <string name="device_screen_attention_button">注意事項</string>
    <string name="device_screen_sensor_label">センサー感度</string>
    <string name="device_screen_sensor_description_label">
        センサー感度とは端末の歩行センサーの感度状態を表したものです。
        \n次の5つの状態に分けられ、精度が低くなるほど正確な歩数が計測できなくなります。
        \n\n[高精度、通常精度、低精度、非常に低精度、利用不可]
    </string>
    <string name="device_screen_step_count_in_os_label">端末の歩行センサーから受け取った歩数:</string>
    <string name="device_screen_step_count_by_app_first_time_label">アプリ初回起動時に端末が持っていた歩数:</string>
    <string name="device_screen_os_reboot_date">前回の端末再起動日時:</string>
    <string name="device_screen_os_reboot_non_date">-</string>

    <string name="accuracy_default">-</string>
    <string name="accuracy_high_message">高精度</string>
    <string name="accuracy_medium_message">普通の精度</string>
    <string name="accuracy_low_message">低い精度</string>
    <string name="accuracy_unreliable_message">非常に低精度</string>
    <string name="accuracy_no_contact_message">利用不可</string>

    <string name="device_screen_attention_title">歩数に関する注意事項</string>
    <string name="device_screen_attention_description">
        この画面で表示している歩数は端末に搭載されている歩行センサーデバイスからほぼリアルタイムで歩数を受信し、アプリ内で計算して表示しています。
        \n\n受信する歩数は、端末を再起動したタイミングで0となりそこからセンサーが検知した歩数のトータル値となります。
        \n\nそのため、GoogleFitのように日時単位で計測することが困難であり日々の歩数を計測するには1日1回は必ずアプリを起動する必要があります。
        \n\n（バックグラウンドに常駐しタイマー制御すれば不可能ではありませんが、昨今のAndroidはサードパーティアプリがバックグラウンドで動く際の制約を厳しくしているのでなかなか難しいと考えます）

    </string>

    <string name="permission_show_rationale_message">
        このアプリは歩数をカウントします。
        \nそのため、端末に搭載された身体活動センサーの使用許可が必要になります。
        \n
        \n次の画面で許可するか拒否するか選択してください。
    </string>
    <string name="permission_never_ask_again_message">
        歩数をカウントするためスマホ端末の身体活動機能を使う権限を許可ください。「端末のアプリ設定画面」で許可設定ができます。
    </string>
    <string name="dialog_to_settings_button">端末のアプリ設定画面</string>

    <string name="google_fit_screen_distance_label">移動距離: %1$s m</string>
    <string name="google_fit_screen_info_button">連携方法</string>
    <string name="google_fit_screen_info_title">Google Fitとの連携について</string>
    <string name="google_fit_screen_info_desc">
        この画面を開いた時に連携許可のダイアログが表示されますので、それに従って許可をお願いします。
        \n\n許可をせずにダイアログを閉じてしまった場合、再度この画面を開くことで再び連携許可ダイアログが表示されます。
        \n\n・連携許可をしても歩数が0のままの場合
        \n連携したGoogleアカウントでGoogleFitを有効にしていないと歩数がカウントできません。
        \nPlayストアでGoogleFitアプリを端末にインストールし、GoogleFitを有効にしてください。
        \n\n・連携アカウントを変更したい場合
        \n一度GoogleFitを解除する必要があります。解除方法に従ってGoogleFitとの連携を解除し再び連携してください。
    </string>

    <string name="google_fit_screen_disable_desc_button">解除方法</string>
    <string name="google_fit_screen_disable_desc_title">Google Fitとの連携を解除する方法</string>
    <string name="google_fit_screen_disable_desc">
        1.端末の設定アプリを起動します。
        \n2.以下の順にタップします。
        \n\n[Google（サービスと設定）]-> [アカウントサービス] -> [Google Fit] -> [Google Fitのアプリとデバイス]
        \n\n3.アプリの中から「StepCounterApp」をタップし「接続を解除」ボタンで解除してください。
        \n\n※解除後にこの画面を開くと再度連携が可能です。
    </string>

    <string name="dashboard_screen_toggle_sensor">端末センサー</string>
    <string name="dashboard_screen_toggle_google_fit">Google Fit</string>

    <string name="setting_screen_app_version_label">アプリバージョン</string>
    <string name="setting_screen_licenses_label">オープンソースライセンス</string>
    <string name="setting_screen_licenses_desc">利用OSSのライセンスを表示します。</string>

</resources>
