<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="jp.hotdrop.stepcountapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_google_fit"
        android:name="jp.hotdrop.stepcountapp.ui.googlefit.GoogleFitFragment"
        android:label="@string/title_google_fit"
        tools:layout="@layout/fragment_google_fit" />
    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="jp.hotdrop.stepcountapp.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

</navigation>
