<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.setting.SettingsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/app_version_area"
        style="@style/SettingsRow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/app_version_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_screen_app_version_label"
            style="@style/SettingRowTitle" />

        <TextView
            android:id="@+id/app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/SettingRowSubTitle"
            tools:text="1.0.0" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/licenses_area"
        style="@style/SettingsRow"
        app:layout_constraintTop_toBottomOf="@+id/app_version_area"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/licenses_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_screen_licenses_label"
            style="@style/SettingRowTitle"/>

        <TextView
            android:id="@+id/licenses_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_screen_licenses_desc"
            style="@style/SettingRowSubTitle" />

    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/snack_bar_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>