<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tab.HomeFragment">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/date_view_pager"
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_date_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/device_screen_overview"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_view_pager" />

    <TextView
        android:id="@+id/step_counter"
        style="@style/StepCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overview"
        tools:text="6,544"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/info_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overview" />

    <Button
        android:id="@+id/info_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:drawableTop="@drawable/ic_info"
        android:textColor="@color/blue"
        android:text="@string/device_screen_info_button"
        app:layout_constraintEnd_toStartOf="@+id/attention_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/step_counter" />

    <Button
        android:id="@+id/attention_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/ic_warning"
        android:textColor="@color/yellow"
        android:text="@string/device_screen_attention_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/info_button"
        app:layout_constraintTop_toTopOf="@+id/info_button" />

    <androidx.cardview.widget.CardView
        android:id="@+id/info_card_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:visibility="gone"
        app:cardCornerRadius="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_button"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/sensor_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_screen_sensor_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sensor_hint_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:selectableItemBackground"
                android:drawableStart="@drawable/ic_help_outline"
                app:layout_constraintBottom_toBottomOf="@+id/sensor_label"
                app:layout_constraintStart_toEndOf="@+id/sensor_accuracy"
                app:layout_constraintTop_toTopOf="@+id/sensor_label" />

            <TextView
                android:id="@+id/sensor_accuracy"
                style="@style/Accuracy.High"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/accuracy_default"
                app:layout_constraintEnd_toEndOf="@+id/sensor_label"
                app:layout_constraintStart_toStartOf="@+id/sensor_label"
                app:layout_constraintTop_toBottomOf="@+id/sensor_label"
                tools:text="高精度" />

            <TextView
                android:id="@+id/sensor_hint_description"
                style="@style/Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                android:text="@string/device_screen_sensor_description_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sensor_accuracy" />

            <View
                android:id="@+id/counter_separator"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sensor_hint_description" />

            <TextView
                android:id="@+id/step_count_in_os_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/device_screen_step_count_in_os_label"
                app:layout_constraintEnd_toStartOf="@+id/step_count_in_os"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/counter_separator" />

            <TextView
                android:id="@+id/step_count_in_os"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/step_count_in_os_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/step_count_in_os_label"
                app:layout_constraintTop_toTopOf="@+id/step_count_in_os_label"
                tools:text="21,345" />

            <TextView
                android:id="@+id/step_count_by_reboot_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/device_screen_step_count_by_app_first_time_label"
                app:layout_constraintEnd_toStartOf="@+id/step_count_by_reboot"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/step_count_in_os_label" />

            <TextView
                android:id="@+id/step_count_by_reboot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/step_count_by_reboot_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/step_count_by_reboot_label"
                app:layout_constraintTop_toTopOf="@+id/step_count_by_reboot_label"
                tools:text="16,345" />

            <TextView
                android:id="@+id/device_screen_os_reboot_date_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/device_screen_os_reboot_date"
                app:layout_constraintEnd_toStartOf="@+id/device_screen_os_reboot_date"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/step_count_by_reboot_label" />

            <TextView
                android:id="@+id/device_screen_os_reboot_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/device_screen_os_reboot_date_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/device_screen_os_reboot_date_label"
                app:layout_constraintTop_toTopOf="@+id/device_screen_os_reboot_date_label"
                tools:text="2020年4月2日" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/attention_card_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:visibility="gone"
        app:cardCornerRadius="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_button"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/attention_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_screen_attention_title"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ScrollView
                android:id="@+id/description_scroll_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/attention_title">

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/device_screen_attention_description" />

            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>